--- a/src/age_qt_gui/shaders/age_qt_gui_shaders.qrc
+++ b/src/age_qt_gui/shaders/age_qt_gui_shaders.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource>
-        <file>age_ui_qt_emboss3x3_fsh.glsl</file>
-        <file>age_ui_qt_emboss5x5_fsh.glsl</file>
-        <file>age_ui_qt_post_process_vsh.glsl</file>
+        <file>age_ui_qt_pp_emboss3x3_fsh.glsl</file>
+        <file>age_ui_qt_pp_emboss5x5_fsh.glsl</file>
+        <file>age_ui_qt_pp_scale2x_fsh.glsl</file>
+        <file>age_ui_qt_pp_vsh.glsl</file>
         <file>age_ui_qt_render_fsh.glsl</file>
         <file>age_ui_qt_render_vsh.glsl</file>
     </qresource>
