--- a/src/age_qt_gui/shaders/age_qt_gui_shaders.qrc
+++ b/src/age_qt_gui/shaders/age_qt_gui_shaders.qrc
@@ -6,6 +6,7 @@
         <file>age_ui_qt_pp_gauss3x3_t_fsh.glsl</file>
         <file>age_ui_qt_pp_gauss5x5_s_fsh.glsl</file>
         <file>age_ui_qt_pp_gauss5x5_t_fsh.glsl</file>
+        <file>age_ui_qt_pp_scale2x_age_fsh.glsl</file>
         <file>age_ui_qt_pp_scale2x_fsh.glsl</file>
         <file>age_ui_qt_pp_vsh.glsl</file>
         <file>age_ui_qt_render_fsh.glsl</file>
